Updated example configuration for RPL Classic

--- a/examples/ipso-objects/Makefile
+++ b/examples/ipso-objects/Makefile
@@ -8,6 +8,8 @@ MODULES += os/net/app-layer/coap
 MODULES += os/services/lwm2m
 MODULES += os/services/ipso-objects
 
+MAKE_ROUTING = MAKE_ROUTING_RPL_CLASSIC
+
 CONTIKI=../..
 include $(CONTIKI)/Makefile.include
 
